--- a/Linkedin-app/index.html
+++ b/Linkedin-app/index.html
@@ -3,6 +3,7 @@
     <title>Linkedin Inventive </title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="./static/css/main.min.css">
     <script src="node_modules/core-js/client/shim.min.js"></script>
     <script src="node_modules/zone.js/dist/zone.js"></script>
     <script src="node_modules/reflect-metadata/Reflect.js"></script>
